--- a/style.css
+++ b/style.css
@@ -7396,6 +7396,7 @@ h2.extensorfrase {
         margin: auto;
         border-radius: 10vw;
         margin-top: 1.5vh;
+        font-size: 3.5vw;
     }
 
     .personalizado-loja {
