--- a/admin/style.css
+++ b/admin/style.css
@@ -887,6 +887,22 @@ label#embreve {
     align-items: center;
 }
 
+.planilhablockindex {
+    margin: 1vw;
+    padding: 1vw;
+    background-color: transparent;
+    border-radius: 1vw;
+}
+
+.planilhablockindex a{
+    text-decoration: none;
+    color: black;
+}
+
+.planilhablockindex h2 {
+    color: var(--rosaprimario);
+}
+
 .contashow img {
     margin-right: 0.5vw;
     width: 3vw;
